# claude-code-karma

./: .gitignore  .gitmodules  .ultrapilot-worker-2-summary.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  README.md  SECURITY.md  SETUP.md  SQLITE_OPTIMIZATION_AUDIT.md  dev.py  navigation.md  package-lock.json
api/: .gitignore  CHANGES.md  CLAUDE.md  OPTIMIZATION_SUMMARY.md  PERFORMANCE_FIXES_SUMMARY.md  README.md  SETUP.md  __init__.py  collectors.py  command_helpers.py  config.py  find_edits.py  find_session_api.py  http_caching.py  main.py  parallel.py  pyproject.toml  requirements.txt  schemas.py  session_detail.json  session_story.py  ui-ux-research.md  utils.py  utils_io.py
api/benchmarks/: bench_endpoints.py
api/cli/: db.py  main.py  sessions.py
api/command_helpers/: __init__.py  categories.py  cli_js.py  parsing.py  plugins.py
api/db/: __init__.py  connection.py  indexer.py  queries.py  schema.py  sync_queries.py
api/docs/: CLAUDE_CODE_SYNC.md  claude-code-local-storage-research.md  claude-karma-information-architecture.md  performance-optimization.md  sqlite-optimization.md  ui-tech-stack.md
api/domain/: events.py  member.py  project.py  subscription.py  team.py
api/middleware/: __init__.py
api/models/: README.md  __init__.py  agent.py  async_session.py  base_cache.py  batch_loader.py  bounded_cache.py  compaction_detector.py  content.py  conversation.py  history.py  hook.py  jsonl_utils.py  live_session.py  message.py  plan.py  plugin.py  project.py  session.py  session_index.py  session_relationship.py  sync_config.py  sync_manifest.py  task.py  todo.py  tool_result.py  usage.py  workflow.py
api/repositories/: __init__.py  event_repo.py  member_repo.py  project_repo.py  subscription_repo.py  team_repo.py
api/routers/: __init__.py  admin.py  agent_analytics.py  agents.py  analytics.py  commands.py  docs.py  history.py  hooks.py  live_sessions.py  plans.py  plugins.py  projects.py  remote_sessions.py  sessions.py  settings.py  skills.py  subagent_sessions.py  sync_deps.py  sync_devices.py  sync_members.py  sync_operations.py  sync_pairing.py  sync_pending.py  sync_projects.py  sync_status.py  sync_system.py  sync_teams.py  tools.py
api/scripts/: SETUP.md  backfill_titles.py  hooks.yaml  live_session_tracker.py  plan_approval.py
api/services/: __init__.py  conversation_endpoints.py  desktop_sessions.py  file_validator.py  folder_id.py  remote_plans.py  remote_sessions.py  session_filter.py  session_lookup.py  session_reconciler.py  session_relationships.py  session_title_cache.py  subagent_types.py  sync_folders.py  sync_identity.py  sync_identity_match.py  sync_metadata.py  sync_metadata_reconciler.py  sync_metadata_writer.py  sync_reconciliation.py  syncthing_proxy.py  watcher_manager.py  workflow_engine.py
api/tests/: __init__.py  conftest.py  test_agent.py  test_auto_share_folders.py  test_cli_db.py  test_cli_sessions.py  test_compaction_detector.py  test_content.py  test_conversation_endpoints.py  test_cross_platform_paths.py  test_db.py  test_desktop_sessions.py  test_domain_events.py  test_domain_member.py  test_domain_project.py  test_domain_subscription.py  test_domain_team.py  test_git_identity.py  (+54 more)
cli/: pyproject.toml
(+738 files in other folders)
