[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["models*"]

[project]
name = "claude-code-models"
version = "0.1.0"
description = "Pydantic models for parsing Claude Code local storage"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.9"
dependencies = [
    "pydantic>=2.0",
    "pydantic-settings>=2.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "aiofiles>=24.1.0",
    "cachetools>=5.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
addopts = "-v --tb=short"
asyncio_mode = "auto"

[tool.coverage.run]
source = ["models"]
omit = ["tests/*"]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if TYPE_CHECKING:",
    "raise NotImplementedError",
]

[tool.ruff]
target-version = "py39"
line-length = 100

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
]
ignore = [
    "E501",   # line too long (handled by formatter)
    "B017",   # pytest.raises(Exception) - needed for frozen model tests
]

[tool.ruff.lint.isort]
known-first-party = [
    "command_helpers",
    "config",
    "db",
    "http_caching",
    "middleware",
    "models",
    "parallel",
    "routers",
    "schemas",
    "services",
]

[tool.ruff.lint.per-file-ignores]
# E402: Module level import not at top of file - needed for sys.path manipulation
"apps/api/*.py" = ["E402"]
"apps/api/**/*.py" = ["E402"]
"routers/*.py" = ["E402"]
"tests/*.py" = ["E402"]
"tests/api/*.py" = ["E402"]

[tool.ruff.format]
quote-style = "double"
indent-style = "space"
